webmention code deleted

--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@ layout: default
         </h2>
         {{ post.excerpt }}
 
-        <h4><a href="{{ post.url }}" class="btn btn-default">Read more...</a>
-          <!--&nbsp;&nbsp;<span class="label label-primary">Webmention Count: <span class="badge">{% webmention_count page.url | prepend: site.baseurl %}</span></span>-->
-        </h4>
+        <h4><a href="{{ post.url }}" class="btn btn-default">Read more...</a></h4>
         <br>
       </li>
     {% endfor %}
